<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="3"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center|top"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="35dp"
            android:layout_weight="1"
            android:contentDescription="@string/login_logo"
            android:visibility="visible"
            tools:src="@drawable/ic_logo_main_1492_438" />

        <androidx.cardview.widget.CardView
            android:id="@+id/infoLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_sul"
                    android:textColor="@color/contact"
                    android:textColorHint="@color/contact"
                    android:textSize="24sp"
                    app:met_baseColor="@color/plaintText"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/plaintText"
                    app:met_singleLineEllipsis="true" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/contact"
                    android:textColorHint="@color/contact"
                    android:textSize="24sp"
                    app:met_baseColor="@color/plaintText"
                    app:met_floatingLabel="highlight"
                    app:met_primaryColor="@color/plaintText"
                    app:met_singleLineEllipsis="true" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/contact"
                android:text="@string/sign_up"
                android:textColor="@color/plaintText" />

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/contact"
                android:text="@string/sign_in"
                android:textColor="@color/plaintText" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>