<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/background"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_sul"
            android:textColor="@color/contact"
            android:textColorHint="@color/contact"
            android:textSize="24sp"
            app:met_baseColor="@color/plaintText"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/plaintText"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/contact"
            android:textColorHint="@color/contact"
            android:textSize="24sp"
            app:met_baseColor="@color/plaintText"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/plaintText"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/plaintText"
            android:textColorHint="@color/plaintText"
            android:textSize="24sp"
            app:met_baseColor="@color/plaintText"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/plaintText"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>


</androidx.cardview.widget.CardView>