<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activity.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        android:weightSum="4"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/category_start_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:text="@string/catName"
            android:textColor="@color/plaintText"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/diagnostic_start_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/museo_sans_cyrl"
            android:gravity="start"
            android:text="Название теста"
            android:textColor="@color/plaintText"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:scrollbarStyle="insideInset">

            <TextView
                android:id="@+id/diagnostic_start_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/museo_sans_cyrl"
                android:gravity="start"
                android:text="@string/diagnosticDesc"
                android:textColor="@color/plaintText"
                android:textSize="18sp" />
        </ScrollView>


        <RelativeLayout
            android:id="@+id/startCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/btnPlay"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/contact"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/startBtn"
                android:textColor="@color/plaintText"
                android:textStyle="bold"
                android:theme="@style/LightButtons" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>