<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragment.CategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/headerText"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_gravity="left"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/category_H1"
            android:textColor="@color/plaintText"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/imageViewAnim"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:visibility="invisible"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/category"
            android:textColor="@color/plaintText"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/categoryTab"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/plaintText"
            app:tabBackground="@drawable/round_two_cat"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="160dp"
            app:tabMode="scrollable" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/diagnosticTestsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/background"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:ignore="ObsoleteLayoutParam,UnknownId" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/background">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/museo_sans_cyrl"
                android:paddingLeft="15dp"
                android:text="@string/description"
                android:textAlignment="viewStart"
                android:textColor="@color/plaintText"
                android:textSize="15sp"
                tools:ignore="RtlCompat,RtlHardcoded,RtlSymmetry" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>