<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:clickable="false"
    android:visibility="visible"
    tools:context=".ui.fragment.AccountFragment">

    <LinearLayout
        android:id="@+id/account_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/userLayOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="horizontal"
            android:weightSum="2"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/userLogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/user_logo"
                android:src="@drawable/ic_test_account_50" />

            <TextView
                android:id="@+id/userLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/guest"
                android:textColor="@color/plaintText"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>


        <TextView
            android:id="@+id/action_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:text="@string/account_name"
            android:textColor="@color/plaintText"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="15dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:cardBackgroundColor="@color/background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Настройки приложения"
                android:textColor="@color/plaintText"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/arrow"
                android:src="@drawable/ic_new_arrow_removebg_preview" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="О проекте"
                android:textColor="@color/plaintText"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/arrow"
                android:src="@drawable/ic_new_arrow_removebg_preview" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/quitAccountView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/background"
            tools:ignore="MissingConstraints,ObsoleteLayoutParam">

            <TextView
                android:id="@+id/inOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="Выход"
                android:textColor="@color/plaintText"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/arrow"
                android:src="@drawable/ic_new_arrow_2_removebg_preview" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>