<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/CardView"
    android:layout_height="160dp"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/psyTestMainCard"
        android:layout_width="@dimen/CardView"
        android:layout_height="160dp"
        app:cardBackgroundColor="@color/background">

        <LinearLayout
            android:id="@+id/item_psy_layout"
            android:layout_width="@dimen/CardView"
            android:layout_height="160dp"
            android:background="@drawable/round_two"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/diagnosticName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="center_vertical"
                    android:text="@string/stub"
                    android:textAlignment="viewStart"
                    android:textColor="@color/plaintText"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat,RtlHardcoded" />

            </RelativeLayout>


            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="220dp"
                android:layout_height="15dp"
                android:layout_above="@+id/diagnosticLine"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"
                tools:ignore="ObsoleteLayoutParam" />

            <LinearLayout
                android:id="@+id/diagnosticLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal"
                android:weightSum="4"
                tools:ignore="ObsoleteLayoutParam">

                <TextView
                    android:id="@+id/txtTotalQuestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="left"
                    android:text="@string/onethety"
                    android:textColor="@color/plaintText"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

                <TextView
                    android:id="@+id/txtTotalTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:fontFamily="@font/museo_sans_cyrl"
                    android:gravity="right"
                    android:text="@string/six_min"
                    android:textColor="@color/plaintText"
                    android:textSize="12sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>